--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+body {
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
@@ -41,7 +49,22 @@
   display: flex;
   /* flex-direction: row; */
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  background-color:#21222A;
+  padding: 30px 25px;
+  height: 90px;
+}
+
+.title {
+  margin-right: auto;
+  color:#61DAFB;
+  font-weight: 700;
+  font-size: 22px;
+}
+
+.extra-title {
+  color:#DEEBF8;
+  font-weight: 600;
 }
 
 .Nav-items {
@@ -56,9 +79,25 @@
 }
 
 .logo-image {
-  width: 90px;
+  /* width: 90px;
+  margin-left: 0; */
+  width: 28.93px;
+height: 28.93px;
+top: 31px;
+left: 26px;
+padding: 2.21px, 0.62px, 2.21px, 0.62px;
+color:#00D8FF;
 }
 
-.container {
+/* .container {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+} */
+
+body {
+  margin: 0;
+  font-family: Inter, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
 }
