--- a/src/App.css
+++ b/src/App.css
@@ -94,10 +94,44 @@ color:#00D8FF;
 } */
 
 body {
-  margin: 0;
+  /* margin: 0; */
   font-family: Inter, sans-serif;
+  background-color: #282D35;
 }
 
 * {
   box-sizing: border-box;
+}
+
+.main--h1 {
+  margin: 10;
+  letter-spacing: -0.05em;
+}
+
+main {
+  color: white;
+  padding: 57px 25px;
+  background-image: url("./Group.png");
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-position-y: 75%;
+}
+
+.main-ul > li {
+  line-height: 19px;
+  letter-spacing: 0em;
+  padding-block: 10px;
+}
+
+.footer {
+  display: flex;
+  /* flex-direction: row; */
+  align-items: center;
+  padding: 30px 25px;
+  color: white;
+}
+
+.main-ul > li::marker {
+  color: #61dafb;
+  font-size: 1.5em;
 }
